# psdr-jit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dev_notes.md  pyproject.toml
cuda/: psdr_jit.cu  psdr_jit.h
cuda/host/: knn.cuh
cuda/kernel/: knn.cu
include/misc/: Exception.h  utils.h
include/psdr/: constants.h  fwd.h  jit_optix_test.h  macros.h  object.h  optix_stubs.h  psdr.h  types.h  utils.h
include/psdr/bsdf/: bsdf.h  diffuse.h  ggx.h  microfacet.h  microfacet_pv.h  normalmap.h  roughconductor.h  roughdielectric.h
include/psdr/core/: AQ_distrb.h  bitmap.h  bitmap_loader.h  cube_distrb.h  frame.h  intersection.h  pmf.h  ray.h  records.h  sampler.h  transform.h  warp.h
include/psdr/edge/: edge.h
include/psdr/emitter/: area.h  emitter.h  envmap.h
include/psdr/integrator/: collocated.h  direct.h  field.h  integrator.h  path.h
include/psdr/optix/: ptx.h
include/psdr/scene/: optix.h  scene.h  scene_loader.h  scene_optix - 副本.h  scene_optix.h
include/psdr/sensor/: orthographic.h  perspective.h  sensor.h
include/psdr/shape/: mesh.h
resources/: __init__.py  setup.py
src/: jit_optix_test.cpp  optix_stubs.cpp  psdr.cpp
src/bsdf/: diffuse.cpp  ggx.cpp  microfacet.cpp  microfacet_pv.cpp  normalmap.cpp  roughconductor.cpp  roughdielectric.cpp
src/core/: AQ_distrb.cpp  bitmap.cpp  bitmap_loader.cpp  cube_distrb.cpp  pmf.cpp  sampler.cpp
src/emitter/: area.cpp  envmap.cpp
src/integrator/: collocated.cpp  direct.cpp  field.cpp  integrator.cpp  path - 副本.cpp  path.cpp
src/optix/: ptx.cpp
src/psdr_jit/: __init__.py
src/scene/: scene.cpp  scene_loader.cpp  scene_optix - 副本.cpp  scene_optix.cpp
src/sensor/: orthographic.cpp  perspective.cpp  sensor.cpp
src/shape/: mesh.cpp
tutorials/: Forward_AD_envmap.ipynb  Foward_AD.ipynb  Inverse_1.ipynb  Inverse_2.ipynb  batch_render.ipynb  different_integrator.ipynb  embedder.py  image_util.py  nerf.ipynb  neural_bsdf.ipynb  secondary_edge_guiding.ipynb
tutorials/.ipynb_checkpoints/: Foward_AD-checkpoint.ipynb
tutorials/data/texture/: illya.exr  wood.exr
unit_test/: bunny_env.xml  cbox.exr  cbox.xml  debug.exr  debug.xml  forward_1.py  forward_3.py  inv_1.py  inv_2.py  inv_3.py  inv_4.py  inv_test.py  inv_test2.py  inv_test3.py  inv_test3_simple.py  inv_test4.py  jit_test.py  psdr_jit_debug.exr  render_test.py  sampler_test.py  scene.xml  test.py  texture.xml
unit_test/data/: albedo.exr
unit_test/data/butterfly_flower/: scene.xml
unit_test/data/butterfly_flower/data/: bsdfs[0]_diffuseReflectance.exr  bsdfs[1]_reflectance.exr
unit_test/data/butterfly_flower/tar_images/: 0.exr  1.exr  10.exr  100.exr  101.exr  102.exr  103.exr  104.exr  105.exr  106.exr  107.exr  108.exr  109.exr  11.exr  110.exr  111.exr  112.exr  113.exr  114.exr  115.exr  116.exr  117.exr  118.exr  119.exr  12.exr  120.exr  121.exr  122.exr  123.exr  124.exr  125.exr  126.exr  127.exr  128.exr  129.exr  13.exr  130.exr  131.exr  132.exr  133.exr  (+287 more)
unit_test/data/envmaps/: ballroom_256.exr  ballroom_64.exr  debug.exr  debug2.exr  office.exr  parched.exr  parched_64.exr  parched_g10.exr  pink.exr
unit_test/data/tex_square/: bunny_env.xml  scene.xml
unit_test/data/tex_square/data/: bsdfs[0]_roughness.exr  bsdfs[0]_specularReflectance.exr
