[build-system]
requires = ["scikit-build-core>=0.3.3"]
build-backend = "scikit_build_core.build"


[project]
name = "psdr_jit"
version = "0.2.1"
description = "Path-space differentiable renderer with drjit as the numerical backend."
readme = "README.md"

requires-python = ">=3.8"

[tool.scikit-build]
cmake.verbose = true
wheel.expand-macos-universal-tags = true
build-dir = "build/{wheel_tag}"